--- a/index.html
+++ b/index.html
@@ -100,13 +100,14 @@
 <script>
   // Firebase Config
   const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_AUTH_DOMAIN",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_STORAGE_BUCKET",
-    messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-    appId: "YOUR_APP_ID"
-  };
+  apiKey: "AIzaSyBMEmLkJ8_-A1iSD_IF2NccOJHdcRm_Lug",
+  authDomain: "study-2f23d.firebaseapp.com",
+  projectId: "study-2f23d",
+  storageBucket: "study-2f23d.firebasestorage.app",
+  messagingSenderId: "213003244292",
+  appId: "1:213003244292:web:ef994cb72bc3d265037651",
+  measurementId: "G-WNCK3CT1V2"
+};
 
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
