--- a/auth.html
+++ b/auth.html
@@ -4,8 +4,9 @@
 <meta charset="UTF-8">
 <title>Sign In | Sign Up</title>
 
+<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-<!-- Font Awesome for icons -->
+<!-- Font Awesome for Google icon -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
 <style>
@@ -25,7 +26,6 @@
     padding: 30px 25px;
     width: 350px;
     border-radius: 12px;
-    box-sizing: border-box;
   }
 
   h2 {
@@ -41,14 +41,10 @@
     border-radius: 6px;
     border: none;
     box-sizing: border-box;
-  }
-
-  input {
     font-size: 1rem;
   }
 
   button {
-    font-size: 1rem;
     cursor: pointer;
   }
 
@@ -70,13 +66,9 @@
     justify-content: center;
     gap: 10px;
     margin-top: 10px;
-    background: #DB4437; /* Default Google Red */
+    background: #DB4437; /* Google Red */
     color: white;
     font-weight: 500;
-  }
-
-  .phone-btn {
-    background: #4CAF50;
   }
 </style>
 </head>
@@ -91,10 +83,7 @@
     <input type="email" id="signin-email" placeholder="Email">
     <input type="password" id="signin-password" placeholder="Password">
     <button id="signInBtn">Sign In</button>
-
     <button id="googleSignInBtn" class="social-btn"><i class="fab fa-google"></i> Sign in with Google</button>
-    <button id="phoneSignInBtn" class="social-btn phone-btn"><i class="fas fa-phone"></i> Sign in with Phone</button>
-
     <div class="switch" onclick="showSignUp()">Don’t have an account? Sign Up</div>
   </div>
 
@@ -105,10 +94,7 @@
     <input type="email" id="signup-email" placeholder="Email">
     <input type="password" id="signup-password" placeholder="Password">
     <button id="signUpBtn">Create Account</button>
-
     <button id="googleSignUpBtn" class="social-btn"><i class="fab fa-google"></i> Sign up with Google</button>
-    <button id="phoneSignUpBtn" class="social-btn phone-btn"><i class="fas fa-phone"></i> Sign up with Phone</button>
-
     <div class="switch" onclick="showSignIn()">Already have an account? Sign In</div>
   </div>
 
@@ -117,10 +103,11 @@
 <!-- Firebase Scripts -->
 <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
 
 <script>
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
+ // Firebase Config
+  const firebaseConfig = {
   apiKey: "AIzaSyBMEmLkJ8_-A1iSD_IF2NccOJHdcRm_Lug",
   authDomain: "study-2f23d.firebaseapp.com",
   projectId: "study-2f23d",
@@ -130,10 +117,12 @@ const firebaseConfig = {
   measurementId: "G-WNCK3CT1V2"
 };
 
+
+  // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
+  const db = firebase.firestore();
 
-  // SHOW SIGN UP / SIGN IN
   function showSignUp() {
     document.getElementById("signIn").classList.add("hidden");
     document.getElementById("signUp").classList.remove("hidden");
@@ -144,62 +133,66 @@ const firebaseConfig = {
     document.getElementById("signIn").classList.remove("hidden");
   }
 
-  // EMAIL/PASSWORD SIGN UP
+  // Sign Up with Email
   document.getElementById("signUpBtn").addEventListener("click", () => {
     const email = document.getElementById("signup-email").value;
     const password = document.getElementById("signup-password").value;
     const name = document.getElementById("signup-name").value;
 
+    if (!name) return alert("Please enter your name");
+
     auth.createUserWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        userCredential.user.updateProfile({ displayName: name });
-        alert("Account created! Welcome " + name);
+      .then(userCredential => {
+        const user = userCredential.user;
+        user.updateProfile({ displayName: name }).then(() => {
+          // Save user to Firestore
+          db.collection("users").doc(user.email).set({
+            name: name,
+            email: user.email
+          }).then(() => {
+            alert("Account created and saved to Firestore! Welcome " + name);
+            location.href = "index.html";
+          });
+        });
       })
-      .catch((error) => {
-        alert(error.message);
-      });
+      .catch(error => alert(error.message));
   });
 
-  // EMAIL/PASSWORD SIGN IN
+  // Sign In with Email
   document.getElementById("signInBtn").addEventListener("click", () => {
     const email = document.getElementById("signin-email").value;
     const password = document.getElementById("signin-password").value;
 
     auth.signInWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        alert("Welcome back " + (userCredential.user.displayName || "User"));
+      .then(userCredential => {
+        alert("Welcome back " + (userCredential.user.displayName || userCredential.user.email));
+        location.href = "index.html";
       })
-      .catch((error) => {
-        alert(error.message);
-      });
+      .catch(error => alert(error.message));
   });
 
-  // GOOGLE SIGN IN / SIGN UP
-  function googleSignIn() {
+  // Google Sign In / Sign Up
+  function googleAuth() {
     const provider = new firebase.auth.GoogleAuthProvider();
     auth.signInWithPopup(provider)
-      .then((result) => alert("Signed in as " + result.user.displayName))
-      .catch((error) => alert(error.message));
-  }
-  document.getElementById("googleSignInBtn").addEventListener("click", googleSignIn);
-  document.getElementById("googleSignUpBtn").addEventListener("click", googleSignIn);
-
-  // PHONE AUTHENTICATION
-  function phoneAuth() {
-    const phoneNumber = prompt("Enter your phone number with country code (+91...)");
-    const appVerifier = new firebase.auth.RecaptchaVerifier('phoneSignInBtn', { size: 'invisible' });
-
-    auth.signInWithPhoneNumber(phoneNumber, appVerifier)
-      .then((confirmationResult) => {
-        const code = prompt("Enter the OTP sent to your phone:");
-        return confirmationResult.confirm(code);
+      .then(result => {
+        const user = result.user;
+        // Save to Firestore
+        db.collection("users").doc(user.email).set({
+          name: user.displayName,
+          email: user.email
+        }, { merge: true }) // merge true avoids overwriting existing fields
+        .then(() => {
+          alert("Signed in with Google! Welcome " + user.displayName);
+          location.href = "index.html";
+        });
       })
-      .then((result) => alert("Signed in as " + result.user.phoneNumber))
-      .catch((error) => alert(error.message));
+      .catch(error => alert(error.message));
   }
-  document.getElementById("phoneSignInBtn").addEventListener("click", phoneAuth);
-  document.getElementById("phoneSignUpBtn").addEventListener("click", phoneAuth);
-</script>
 
+  document.getElementById("googleSignInBtn").addEventListener("click", googleAuth);
+  document.getElementById("googleSignUpBtn").addEventListener("click", googleAuth);
+
+</script>
 </body>
 </html>
