--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <h2>⚡ Quick Actions</h2>
     <button onclick="location.href='timer.html'">⏱ Study Timer</button>
     <button onclick="location.href='add_a_goal.html'">➕ Add Goal</button>
+    <button onclick="location.href='add_exam.html'">🗓 Add Exam</button>
   </section>
 
   <!-- DASHBOARD GRID -->
