Add back to home button in exam timetable
Added a button to navigate back to the home page.

--- a/exam_timetable.html
+++ b/exam_timetable.html
@@ -74,6 +74,7 @@
   <h1>📅 Exam Timetable</h1>
   <p>Stay prepared, stay confident</p>
 </header>
+<button onclick="window.location.href='index.html'" style="margin: 20px auto; display: block; background: #334155; color: white; border-radius: 8px; padding: 10px 16px; border: none; cursor: pointer;">← Back to Home</button>
 
 <main id="examList">
   <p class="empty">Loading exams...</p>
