--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <button onclick="location.href='timer.html'">⏱ Study Timer</button>
     <button onclick="location.href='add_a_goal.html'">➕ Add Goal</button>
     <button onclick="location.href='add_exam.html'">🗓 Add Exam</button>
+    <button onclick="location.href='exam_timetable.html'">📅 View Exam Timetable</button>
   </section>
 
   <!-- DASHBOARD GRID -->
