--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
   <section class="card">
     <h2>⚡ Quick Actions</h2>
     <button onclick="location.href='timer.html'">⏱ Study Timer</button>
-    <button onclick="location.href='add_a_goal.html'">➕ Add Goal</button>
+    <button onclick="location.href='add_goal.html'">➕ Add Goal</button>
     <button onclick="location.href='add_exam.html'">🗓 Add Exam</button>
     <button onclick="location.href='exam_timetable.html'">📅 View Exam Timetable</button>
+    <button onclick="location.href='goals.html'">🎯 View Goals</button>
   </section>
 
   <!-- DASHBOARD GRID -->
