--- a/add_goal.html
+++ b/add_goal.html
@@ -92,6 +92,8 @@
 
 <body>
 
+<button id = "backBtn" onclick="window.location.href='index.html'" style="position: absolute; top: 20px; left: 20px; background: #334155; color: white; border-radius: 8px; padding: 10px 16px; border: none; cursor: pointer;">← Back to Home</button>
+
 <div class="card">
   <h2>🎯 Add New Goal</h2>
 
